--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,18 @@
 buildscript {
     
     repositories {
+
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-        
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:3.1.0'
     }
 }
 
